spacing fixed

--- a/potion.css
+++ b/potion.css
@@ -86,14 +86,11 @@ p {
     margin-block-end: 0;
     margin-top: 2px !important;
     margin-bottom: 2px !important;
-    /* padding-left: 2px !important;
-    padding-right: 2px !important; */
-    /* max-width: 680px !important; */
 }
 
 blockquote {
     border-left: 3px solid;
-    padding-left: 0.9em;
+    padding-left: 13px;
     padding-right: 0.9em;
     margin-top: 8px;
     margin-bottom: 4px;
@@ -203,7 +200,7 @@ pre {
     line-height: normal;
     border-radius: 3px;
     font-size: 85%;
-    padding: 30px 16px 30px 20px;
+    padding: 30px 16px;
     margin: 16px auto;
     max-width: 676px;
     background: rgb(247, 246, 243) none repeat scroll 0% 0%;
